# Dice-Game

./: LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt  unit_test_computerPlayer.py  unit_test_game.py  unit_test_humanPlayer.py  unit_test_player.py  unit_test_playerMain.py  winners.txt
app/: main.py  unit_test_computerPlayer.py  unit_test_game.py  unit_test_humanPlayer.py  unit_test_player.py  unit_test_playerMain.py
