# All the external packages our project depends on.
# Versioning can also be specified
dependencies = [
  'flake8',
  'pylint',
  'coverage',
  'pdoc',
  'build'
]

# Dependencies required by the build system
[build-system]
requires = [
  'setuptools>=46.1.3',
  'wheel>=0.34.2'
]
build-backend = 'setuptools.build_meta'
